--- a/app/assets/stylesheets/main-content.scss
+++ b/app/assets/stylesheets/main-content.scss
@@ -5,8 +5,12 @@ body{
 }
 
 .main-content {
+  background-image: image_url("splash_banner.jpg");
+  background-repeat: no-repeat;
+  background-size: contain, cover;
+  border-top:4px solid #f50;
   background-color: white;
   width: 1125px;
   margin: auto;
-  height: 100%;
+  height: 1000px;
 }
