--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <script>
-      window.logoImg = "<%= image_url('soundcloud-icon-1.svg') %>";
+      window.logoSplash = "<%= image_url('soundcloud-icon-1.svg') %>";
+      window.logoUserNav = "<%= image_url('small_logo.png') %>";
     </script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
