--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -34,7 +34,8 @@
   input {
     border: 2px solid #f2f2f2;
     border-radius: 3px;
-
+    text-align: left;
+    text-indent: 5px;
   }
 
   label {
@@ -51,4 +52,17 @@
     border-radius: 3px;
     height: 40px;
   }
+}
+
+.file-input {
+  width: 300px;
+  
+}
+
+.nav-logout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  height: 100%;
 }
