Seed database, implement random discover page, fix styling

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -6,7 +6,7 @@
   background-color: white;
   margin: 0 auto;
 
-  height: 800px;
+  min-height: 800px;
 }
 
 .upload-content {
@@ -67,3 +67,4 @@
   cursor: pointer;
   height: 100%;
 }
+
