--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <script>
       window.logoSplash = "<%= image_url('soundcloud-icon-1.svg') %>";
       window.logoUserNav = "<%= image_url('small_logo.png') %>";
+      window.pause = "<%= image_url('pause.gif') %>";
+      window.play = "<%= image_url('play.gif') %>";
     </script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
