Make an edit form and fix track show buttons

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -68,3 +68,11 @@
   height: 100%;
 }
 
+.user-show {
+  font-family: 'Roboto', sans-serif;
+  width: 1180px;
+  padding-top: 46px;
+  background-color: white;
+  margin: 0 auto;
+  min-height: 800px;
+}
