--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -69,3 +69,83 @@
   font-size: 15px;
   color: #333333
 }
+
+.track-show {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1180px;
+  height: 380px;
+  background: linear-gradient(135deg, rgb(194, 142, 130) 0%, rgb(161, 108, 48) 100%);
+  position: absolute;
+}
+
+.track-button-show {
+  width: 60px;
+  height: 60px;
+  img {
+    width: 26px;
+  }
+}
+
+.track-details-show {
+  display: flex;
+  justify-content: flex-start;
+  align-items: space-between;
+  padding: 30px;
+}
+
+.artist-link-show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 4px 7px 3px;
+  color: #999;
+  background-color: rgba(0,0,0,.8);
+  margin-bottom: 7px;
+  width: fit-content;
+}
+
+.track-link-show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: white;
+  background-color: rgba(0,0,0,.8);
+  padding: 5px 7px 4px;
+}
+
+.album-art {
+  width: 340px;
+  height: 340px;
+  padding: 20px;
+}
+
+.show-buttons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  height: 53%;
+  padding-left: 100px;
+}
+
+.delete-button {
+  margin-right: 20px;
+  color: whitesmoke;
+  background-color: #f50;
+  border-radius: 3px;
+  border: 1px solid rgb(161, 108, 48);
+  padding: 5px 10px;
+  box-shadow: 0 2px 12px -5px rgba(0,0,0,.1);
+}
+
+.edit-button {
+  color: whitesmoke;
+  background-color: #f50;
+  border-radius: 3px;
+  border: 1px solid rgb(161, 108, 48);
+  padding: 5px 10px;
+  box-shadow: 2px 12px -5px rgba(0,0,0,.1);
+}
