--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -18,13 +18,10 @@
 .upload-form {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  width: 400px;
+  flex-direction: column;
   height: 450px;
-  box-shadow: 0 2px 12px -5px rgba(0,0,0,.1);
-  border: 1px solid #f2f2f2;
-  padding-bottom: 100px;
 
   h1 {
     width: 100%;
@@ -36,7 +33,6 @@
     border: 2px solid #f2f2f2;
     border-radius: 3px;
     text-align: left;
-    text-indent: 5px;
   }
 
   label {
@@ -49,9 +45,10 @@
     align-items: center;
     width: 300px;
     background-color: #f50;
-    color: white;
+    color: whitesmoke;
     border-radius: 3px;
     height: 40px;
+    font-weight: 700;
   }
 }
 
@@ -75,4 +72,140 @@
   background-color: white;
   margin: 0 auto;
   min-height: 800px;
+}
+
+.album-preview {
+  width: 340px;
+  margin-right: 30px;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 12px -5px rgba(0,0,0,.1);
+  border: 1px solid #f2f2f2;
+  padding: 30px 60px 30px;
+  margin-bottom: 100px;
+}
+
+.album-preview-empty {
+  height: 340px;
+  width: 340px;
+  margin-right: 30px;
+  border: 2px dashed #ccc;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #ccc;
+  font-size: 36px;
+  font-family: 'Roboto', sans-serif;
+  list-style: none;
+}
+
+.pre-upload-input {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.pre-upload-input + .pre-upload-label {
+    color: white;
+    background-color: #f50;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 100;
+    padding: 10px 15px;
+    height: 40px;
+    width: 300px;
+    border-radius: 3px;
+}
+
+.pre-upload-input:focus + .pre-upload-label,
+.pre-upload-input + .pre-upload-label:hover {
+    background-color: #f70;
+    cursor: pointer;
+}
+
+.pre-form-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 2px 12px -5px rgba(0,0,0,.1);
+  border: 1px solid #f2f2f2;
+  padding: 30px 60px 30px;
+  margin-bottom: 200px;
+  width: 800px;
+  height: 388px;
+}
+
+.small-messages {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.upload-greeting {
+  font-size: 22px;
+}
+
+.small {
+  font-size: 12px;
+}
+
+.vsmall {
+  font-size: 10px;
+  margin-top: 8px;
+}
+
+.big {
+  font-size: 28px;
+}
+
+.discover-item {
+  width: 173px;
+  height: 173px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.discover-art {
+  position: absolute;
+  width: 173px;
+  height: 173px;
+  z-index: 2000;
+  &:hover {
+    z-index: 0;
+  }
+
+  img:hover {
+    z-index: 0;
+  }
+}
+
+.discover-buttons {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.discover-list {
+  display: flex;
+  
+}
+
+.z1000 {
+  z-index: 1000;
 }
