--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       window.logoUserNav = "<%= image_url('small_logo.png') %>";
       window.pause = "<%= image_url('pause.gif') %>";
       window.play = "<%= image_url('play.gif') %>";
+      window.noart = "<%= image_url('noart.png') %>";
     </script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
