--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -7,6 +7,7 @@
   border: 1px solid #f50;
   border-radius: 50%;
   background-color: #f50;
+  cursor: pointer;
   img {
     width: 28px;
     color: white;
@@ -24,6 +25,7 @@
   border: 1px solid #f50;
   border-radius: 50%;
   background-color: #f50;
+  cursor: pointer;
   img {
     width: 28px;
     color: white;
@@ -119,14 +121,15 @@
 .album-art {
   width: 340px;
   height: 340px;
-  padding: 20px;
+  margin: 20px;
+  background-image: image_url("noart.png");
+  background-size: contain;
 }
 
 .show-buttons {
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  height: 53%;
   padding-left: 100px;
 }
 
@@ -138,6 +141,7 @@
   border: 1px solid rgb(161, 108, 48);
   padding: 5px 10px;
   box-shadow: 0 2px 12px -5px rgba(0,0,0,.1);
+  cursor: pointer;
 }
 
 .edit-button {
@@ -147,4 +151,36 @@
   border: 1px solid rgb(161, 108, 48);
   padding: 5px 10px;
   box-shadow: 2px 12px -5px rgba(0,0,0,.1);
+  cursor: pointer;
+}
+
+
+.track-discover {
+  display: flex;
+  justify-content: center;
+}
+
+.track-show-description-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  height: 150px;
+  padding-bottom: 50px;
+}
+
+.track-show-description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  background-color: rgba(0,0,0,.8);
+  padding: 5px 7px 4px;
+  font-style: italic;
+  text-transform: lowercase;
+}
+
+.left-show-elements {
+  width: 66%;
+  height: 100%;
 }
