--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -66,6 +66,8 @@
 }
 
 .user-show {
+  display: flex;
+  justify-content: center;
   font-family: 'Roboto', sans-serif;
   width: 1180px;
   padding-top: 46px;
@@ -175,10 +177,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 173px;
-  height: 173px;
-  margin-right: 20px;
-  margin-top: 20px;
+  width: 175px;
+  height: 175px;
 }
 
 .discover-art {
@@ -187,6 +187,7 @@
   height: 173px;
   background-image: image-url('noart.png');
   background-size: contain;
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
 }
 
 .discover-buttons {
@@ -216,4 +217,14 @@
   word-break: normal;
   line-height: 1.4;
   padding-top: 5px;
+  font-size: 14px;
+}
+
+.discover-item-outer-container {
+  width: 174px;
+  margin: 10px 20px 10px 0;
+}
+
+.shadow {
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
 }
