Create track bar and get buttons to render

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,8 @@
 @import 'reset.scss';
 @import 'splash.scss';
 @import "nav_bar.scss";
-@import 'main-content.scss';
+@import 'main_content.scss';
 @import 'user.scss';
 @import 'user_nav.scss';
 @import 'track.scss';
+@import 'track_bar.scss';
