--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
       window.logoUserNav = "<%= image_url('small_logo.png') %>";
       window.pause = "<%= image_url('pause.gif') %>";
       window.play = "<%= image_url('play.gif') %>";
+      window.track_bar_play = "<%= image_url('track_bar_play.svg') %>";
+      window.track_bar_pause = "<%= image_url('track_bar_pause.svg') %>";
+      window.track_bar_next = "<%= image_url('track_bar_next.svg') %>";
+      window.track_bar_previous = "<%= image_url('track_bar_previous.svg') %>";
+      window.track_bar_repeat_before = "<%= image_url('track_bar_repeat_before.svg') %>";
+      window.track_bar_repeat_after = "<%= image_url('track_bar_repeat_after.svg') %>";
+      window.track_bar_shuffle_before = "<%= image_url('track_bar_shuffle_before.svg') %>";
+      window.track_bar_shuffle_after = "<%= image_url('track_bar_shuffle_after.svg') %>";
     </script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
