--- a/app/assets/stylesheets/main_content.scss
+++ b/app/assets/stylesheets/main_content.scss
@@ -1,7 +1,7 @@
 
 
 body{ 
-  background-color: lightgrey;
+  background-color: #f2f2f2;
 }
 
 .main-content {
@@ -10,7 +10,7 @@ body{
   background-size: contain, cover;
   border-top:4px solid #f50;
   background-color: white;
-  width: 1125px;
+  width: 1240px;
   margin: auto;
   height: 1000px;
 }
