--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -50,7 +50,11 @@
     border-radius: 3px;
     height: 40px;
     font-weight: 700;
-  }
+    img {
+      height: 40px;
+      width: 40px;
+    }
+  } 
 }
 
 .file-input {
