--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       window.track_bar_shuffle_after = "<%= image_url('track_bar_shuffle_after.svg') %>";
       window.track_bar_volume = "<%= image_url('track_bar_volume.svg') %>";
       window.noart = "<%= image_url('noart.png') %>";
+      window.loadingSpinner = "<%= image_url('loading_spinner.svg') %>";
     </script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
