--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,7 +1,14 @@
+.banner {
+  background-image: image_url("splash_banner.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
+
 .splash-main {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
   height: 330px;
   color: white;
@@ -52,4 +59,230 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  margin-bottom: 2rem;
+}
+
+
+.trending {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 24px;
+  padding: 30px;
+}
+
+.trending-headline {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.mobile-banner {
+  margin-top: 60px;
+  background: #f2f2f2;
+  display: flex;
+  height: 450px;
+  padding: 0 70px;
+  
+}
+
+.device-photo {
+  width: 730px;
+  background-image: url(https://fidelityfog-seed.s3.us-east-2.amazonaws.com/never_stop_listening%401x-9c5264ff.jpg);
+  background-position: center bottom; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  // background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.mobile-teaser {
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  width: 325px;
+  margin-left: 45px;
+}
+
+.teaser-header {
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-size: 28px;
+  font-weight: 100;
+  line-height: 1.2;
+  font-size: 36px;
+  margin-bottom: 17px;
+}
+
+.teaser-header:after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 3px;
+  background-image: linear-gradient(90deg,#7d01a1,#f30 50%,#f50);
+  margin-top: 15px;
+}
+
+.teaser-body {
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-size: 24px;
+  font-weight: 100;
+  margin: 0 0 10px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.mobile-links {
+  font: 12px/1.4 Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  color: #333;
+  margin-top: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.apple {
+  margin-right: 4px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: inline-block;
+  width: 135px;
+  background-image: url(https://a-v2.sndcdn.com/assets/images/appstore_badge-875ae97c.png);
+}
+
+.google {
+  width: 115px;
+  background-image: url(https://a-v2.sndcdn.com/assets/images/google_play_badge-26379006.png);
+  margin-right: 4px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: inline-block;
+}
+
+.creator-teaser {
+}
+
+.creator-teaser-inner {
+  position: relative;
+  height: 350px;
+  background-color: #141414;
+  background-image: url(https://a-v2.sndcdn.com/assets/images/hp_creator_image-f3d92e09.jpg);
+  background-size: cover;
+  background-position: 100%;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  padding: 0 570px 0 70px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.creator-teaser-content {
+  max-width: 520px;
+}
+
+.creator-teaser-header {
+  font-size: 36px;
+  font-weight: 100;
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+}
+.creator-teaser-body {
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-weight: 100;
+  font-size: 24px;
+  line-height: 1.35;
+  margin: 11px 0 26px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.signup-module {
+  text-align: center;
+  height: 375px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-weight: 100;
+}
+
+.signup-module-title {
+  font-size: 36px;
+}
+
+.signup-module-body {
+  font-size: 24px;
+  margin: 7px 0;
+}
+
+.signup-module-signup {
+  margin: 10px 0;
+}
+
+.signup-module-button {
+  -webkit-font-smoothing: antialiased;
+  font-size: 18px;
+  height: 46px;
+  min-width: 200px;
+  transition: opacity .2s linear;
+  background-color: #f50;
+  border-color: #f50;
+  color: #fff;
+  line-height: 18px;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  white-space: nowrap;
+  text-align: center;
+  vertical-align: baseline;
+}
+
+.signup-module-login {
+  margin: 5px 0 10px;
+}
+
+.signup-module-login-button {
+  vertical-align: middle;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 10px 15px;
+  // height: 40px;
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  background-color: #fff;
+  cursor: pointer;
+  color: #333;
+  white-space: nowrap;
+  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+  font-weight: 100;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.footer {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  border-top: 1px solid #f2f2f2;
+  height: 60px;
+  margin-bottom: 40px;
+}
+
+.creator-link {
+  margin-left: 10px;
+  font-size: 1.6rem;
 }
