--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       window.noart = "<%= image_url('noart.png') %>";
       window.loadingSpinner = "<%= image_url('loading_spinner.svg') %>";
     </script>
+    <script src="https://kit.fontawesome.com/359c646850.js" crossorigin="anonymous"></script>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto&display=swap');
     </style>
