Change the discover page to only load 2 songs during development

--- a/app/assets/stylesheets/user_nav.scss
+++ b/app/assets/stylesheets/user_nav.scss
@@ -10,6 +10,12 @@
   height: 46px;
   background-color: #333333;
   color: #ccc;
+  li {
+    &:hover {
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
 
 .user-nav-items {
