Setup frontend comments component

--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -75,7 +75,7 @@
   width: 1240px;
   height: 380px;
   background: linear-gradient(135deg, rgb(194, 142, 130) 0%, rgb(161, 108, 48) 100%);
-  position: absolute;
+  // position: absolute;
 }
 
 .track-button-show {
