--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -72,7 +72,8 @@
 
 .user-show {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-direction: column;
   font-family: 'Roboto', sans-serif;
   width: 1240px;
   padding-top: 46px;
