--- a/app/assets/stylesheets/track_bar.scss
+++ b/app/assets/stylesheets/track_bar.scss
@@ -6,18 +6,15 @@
   bottom: 0;
   right: 0;
   width: 100%;
-  min-width: 1180px;
   height: 48px;
   background-color: #f2f2f2;
   border-top: 1px solid #cecece;
 }
 
 .track-bar-controls {
-  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1240px;
 }
 
 .track-bar-details {
@@ -147,4 +144,18 @@
   background-color: #ff5500;
   width: 100%;
   z-index: 5000;
+}
+
+@media only screen and (max-width: 1256px) {
+  .track-bar-controls {
+    justify-content: space-evenly;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+
+  .track-bar-progress-container, .nav-upload-button, .nav-username, .nav-home {
+    display: none;
+  }
 }
