Fix some of the media queries

--- a/app/assets/stylesheets/track_bar.scss
+++ b/app/assets/stylesheets/track_bar.scss
@@ -155,7 +155,7 @@
     width: 100%;
   }
 
-  .track-bar-progress-container, .nav-upload-button, .nav-username, .nav-home {
+  .nav-username, .nav-home {
     display: none;
   }
 }
