--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -8,6 +8,16 @@
 }
 
 .user-banner {
+  display: flex;
+  align-items: center;
   height: 260px;
   margin: 0 -30px;
+}
+
+.user-avatar {
+  height: 200px;
+  width: 200px;
+  margin-left: 30px;
+  background-size: contain;
+  border-radius: 50%;
 }
