--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 0;
   width: 100%;
 }
@@ -31,7 +31,7 @@
     font-size: 24px;
     background-color: black;
     color: #fff;
-    margin: 30px 30px 30px;
+    margin: 30px 30px;
     width: fit-content;
     padding: 9px;
   }
@@ -40,5 +40,5 @@
 .user-show-tracks-header {
   font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
   font-size: 23px;
-  margin: 30px 0;
+  margin: 30px 10px;
 }
