--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>FidelityFog</title>
+    <meta property="og:title" content="FidelityFog" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fidelityfog.herokuapp.com" />
+    <meta property="og:image" content="https://www.jacobmeyer.dev/images/fidelity_fog_splash.png" />
     <%= favicon_link_tag 'favicon.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
