--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta property="og:title" content="FidelityFog" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fidelityfog.herokuapp.com" />
+    <meta property="og:description" content="A music sharing web app based on the popular SoundCloud platform.">
     <meta property="og:image" content="image_url('fidelity_fog_splash.png')" />
     <%= favicon_link_tag 'favicon.ico' %>
     <%= csrf_meta_tags %>
@@ -27,6 +28,7 @@
       window.track_bar_shuffle_after = "<%= image_url('track_bar_shuffle_after.svg') %>";
       window.track_bar_volume = "<%= image_url('track_bar_volume.svg') %>";
       window.noart = "<%= image_url('noart.png') %>";
+      window.loadingSpinner = "<%= image_url('loading_spinner.svg') %>";
       window.loadingSpinner = "<%= image_url('loading_spinner.svg') %>";
     </script>
     <script src="https://kit.fontawesome.com/359c646850.js" crossorigin="anonymous"></script>
