Edit image meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fidelityfog.herokuapp.com" />
     <meta property="og:description" content="A music sharing web app based on the popular SoundCloud platform.">
-    <meta property="og:image" content="image_url('fidelity_fog_splash.png')" />
+    <meta property="og:image" content="https://www.jacobmeyer.dev/images/fidelity_fog_splash.png" />
     <%= favicon_link_tag 'favicon.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
